Redrew all the diagrams
Made corrections as needed.

--- a/hw7/hw7_main.tex
+++ b/hw7/hw7_main.tex
@@ -328,17 +328,11 @@ events for the individual $seats_i$.
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.1]{hw7_4b_actor_aggr.jpg}
-\caption{The aggregate actor environment}
-\label{fig:4b_actor_aggr_env}
+\includegraphics[scale=0.7]{hw7_4b_actor_aggr.png}
+\caption{The aggregate actor}
+\label{fig:4b_actor_aggr}
 \end{figure}
 
-\begin{figure}[h!]
-\centering
-\includegraphics[scale=0.3]{hw7_4b_actor_aggr_detail.jpg}
-\caption{The aggregate actor detail}
-\label{fig:4b_actor_aggr_detail}
-\end{figure}
 
 Feeding into the aggregator agent are $n$ seats.
 
